style: resolvendo o problema de overflow do footer

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -163,7 +163,7 @@ h2.doubt-title {
     display: flex;
     justify-content: space-between;
     gap: 80px;
-    padding: 64px 80px;
+    padding: 64px 12px;
 }
 
 footer {
